package CCSOP.Livraison.Entitie;

import jakarta.persistence.*;
@Table(name="status_deliveries")
@Entity
public class Statut {


    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    private String name;

    public Long getId() {
        return id;
    }

    public void setId(Long id) {
        this.id = id;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }
}