package CCSOP.Livraison.Repository;

import CCSOP.Livraison.Entitie.Role;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.stereotype.Repository;

@Repository
public interface RoleRepository extends JpaRepository<Role, Long> {
    Role findByName(String roleAdmin);
}
